# LLMAgent

./: .copier-answers.yml  .gitignore  Readme.md  config.py  docker-compose.yml  embedding_llm_with_app.ipynb  environment.yml  pyproject.toml  requirements.txt  run_pipeline.py
.zen/: config.yaml
airflow/docker/: airflow.cfg  airflow.db-shm  simple_auth_manager_passwords.json.generated
airflow/docker/dags/: my_first_dag.py  sample_dag.py
data/: clustered_data_20250731.json  clustered_summarized_20250731.json  taxi-rides-20250730.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/travel_packages/: config.json
qdrant_storage/collections/travel_packages/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/travel_packages/0/segments/052ad067-3590-4610-9d1a-38a46ebeba69/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/travel_packages/0/segments/06c4d5c3-deee-435a-b7a6-42b47827ae82/: mutable_id_tracker.mappings
qdrant_storage/collections/travel_packages/0/segments/06c4d5c3-deee-435a-b7a6-42b47827ae82/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/travel_packages/0/segments/4872ea6d-6f2d-4e1c-a49a-0d4d16a5dd63/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/travel_packages/0/segments/793e291a-2dc8-4bc2-9d20-2c70dc02214a/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/travel_packages/0/segments/7c42e241-f4a8-434f-803b-2cfc4e279d22/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/travel_packages/0/segments/a032e775-334f-47d1-824c-a85dd1c44c69/: mutable_id_tracker.mappings  segment.json
qdrant_storage/collections/travel_packages/0/segments/a032e775-334f-47d1-824c-a85dd1c44c69/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/travel_packages/0/segments/e082d9bb-3e43-4b44-af3b-02c820cb79b8/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/travel_packages/0/segments/fdb44c2f-00f0-4e41-8616-8875ec54aca4/payload_index/: IDENTITY  LOG  MANIFEST-000005
src/agent_aj/: data_crawler.py  data_storage.py  main.py
src/agent_aj/app/: agent.py
src/agent_aj/pipelines/: crawling_pipeline.py  etl_pipeline.py  feature_pipeline.py
src/agent_aj/pipelines/data/: travel_deals.txt
src/agent_aj/steps/: crawl_step.py  store_step.py
utils/: cluster.py  extractor.py  simulate.py  summarize.py
