[project]
name = "agent-aj"
version = "0.1.0"
description = ""
authors = [
    {name = "Anjan Debnath",email = "anjan0151@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.8,<3.13"
dependencies = [
    "pymongo (>=4.13.2,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "zenml[server] (>=0.84.0,<0.85.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.69,<0.4.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "google-cloud-bigquery (>=3.35.0,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "comet-ml (>=3.49.12,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "db-dtypes (>=1.4.3,<2.0.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "google-api-python-client (>=2.177.0,<3.0.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langchain-google-community (>=2.0.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "agent_aj", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
